@@ -2,7 +2,7 @@ sdparm (1.04-0.1) unstable; urgency=low
 
   * add SAT ATA Power condition mode page
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 23 Apr 2009 23:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Tue, 02 Jun 2009 11:00:00 -0400
 
 sdparm (1.03-0.1) unstable; urgency=low
 
